:recycle: MDAS-674 Add move file to archive
